--- a/template/styles/main.css
+++ b/template/styles/main.css
@@ -105,7 +105,7 @@ i .bi, .expand-stub, li::marker {
   color: var(--link-color);
 }
 
-a, a:hover, a:active, a:visited {
+a, a:hover, a:active {
   color: var(--link-color);
   text-decoration: none;
 }
@@ -127,14 +127,12 @@ a, a:hover, a:active, a:visited {
 
 .toc .nav > li.active > a,
 .toc .nav > li.active > a:hover,
-.toc .nav > li.active > a:active,
-.toc .nav > li.active > a:visited {
+.toc .nav > li.active > a:active {
   color: var(--link-color);
 }
 
 .toc .nav > li > a,
-.toc .nav > li > a:active,
-.toc .nav > li > a:visited {
+.toc .nav > li > a:active {
   color: rgba(255, 255, 255, 0.55);
 }
 
