Updated header background color

--- a/template/styles/main.css
+++ b/template/styles/main.css
@@ -43,7 +43,7 @@ body {
 }
 
 header {
-  background-color: hsla(0, 0%, 13%, .8);
+  background-color: rgb(42 42 42 / 80%);
   -webkit-backdrop-filter: blur(20px) saturate(150%);
   backdrop-filter: blur(20px) saturate(150%);
 }
